Cool/tests/bad/1-bad.cl
class Main inherits IO {
  main() : Object { 
    if 2 < 2 
    then 
    (while 2 < 3 
    loop 2 pool)
    else {"|"
    ;} fi
    
    -- self@Main.out_int(2) 
  } ;
} ; 

class A {
    greek(x:Int) : Int {x} ;
};